--- a/Activity_1_ADT/Activity_1_ADT.csproj
+++ b/Activity_1_ADT/Activity_1_ADT.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regist.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
